@@ -1,3 +1,0 @@
-<Test>
-    <Item>beaver</Item>
-</Test>
