@@ -1,18 +1,0 @@
-
-<mapping>
-
-        <class name="Required_Root">
-                <map-to xml="Test"/>
-
-                <field name="Name"
-                       type="string" required="true"> 
-                        <bind-xml name="name" node="attribute"/>
-                </field>
-
-                <field name="Item"
-                       type="string" required="true"> 
-                        <bind-xml name="Item" node="element"/>
-                </field>
-        </class>
-
-</mapping>
