@@ -1,0 +1,19 @@
+public class Dog {
+
+   private String colour = null;
+   private String bark = null;
+
+   public String getColour() {
+      return colour;
+   }
+   public void setColour(String colour) {
+      this.colour = colour;
+   }
+
+   public String getBark() {
+      return bark;
+   }
+   public void setBark(String bark) {
+      this.bark = bark;
+   }
+}
