@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<kennel>
+   <dogs>
+      <dog />
+   </dogs>
+</kennel>
