@@ -1,0 +1,3 @@
+<Test name="castor">
+    <Item>beaver</Item>
+</Test>
